--- a/blogapp/views/admin/categorias.handlebars
+++ b/blogapp/views/admin/categorias.handlebars
@@ -1,3 +1,19 @@
 <h2>Lista de categorias</h2>
 <hr>
 <a href="/admin/categorias/add"><button class="btn btn-success">Nova categoria</button></a>
+<br><br>
+{{#each categorias}}
+    <div class="card">
+        <div class="card-body">
+            <h4>{{nome}}</h4>
+            <small>Slug: {{slug}}</small>
+            <br>
+            <small>Data de criação: {{date}}</small>
+            <br>
+            <a href="/admin/categorias/edit/{{_id}}"><button class="btn btn-info mt-4">Editar categoria</button></a>
+        </div>
+    </div>
+{{else}}
+
+
+{{/each}}
