--- a/blogapp/views/admin/addpostagem.handlebars
+++ b/blogapp/views/admin/addpostagem.handlebars
@@ -1,7 +1,12 @@
+{{#each erros}}
+    <div class="alert alert-danger">{{texto}}</div>
+{{else}}
+
+{{/each}}
 <div class="card">
     <div class="card-body">
         <h4>Nova postagem: </h4>
-        <form action="">
+        <form action="/admin/postagens/nova" method="post">
             <label for="titulo">Titulo: </label>
             <input type="text" name="titulo" class="form-control">
             <label for="slug">Slug: </label>
@@ -11,7 +16,7 @@
             <label for="conteudo">Conteúdo: </label>
             <textarea name="conteudo" class="form-control"></textarea>
             <label for="categoria">Categoria: </label>
-            <select name="categoria" class="custom-select">
+            <select name="categoria" class="form-select">
                 {{#each categorias}}
                 <option value="{{_id}}">{{nome}}</option>
                 {{else}}
