--- a/blogapp/views/admin/postagens.handlebars
+++ b/blogapp/views/admin/postagens.handlebars
@@ -2,3 +2,16 @@
 <hr>
 <a href="/admin/postagens/add"><button class="btn btn-success">Nova postagem</button></a>
 <br><br>
+
+{{#each postagens}}
+    <div class="card mt-4">
+        <div class="card-body">
+            <h4>{{titulo}}</h4>
+            <p>Descricao: {{descricao}}</p>
+            <small>Data: {{data}}</small> <br>
+            <small>Categoria: {{categoria.nome}}</small>
+        </div>
+    </div>
+{{else}}
+    <p>Nenhuma postagem registrada.</p>
+{{/each}}
