Deleção de postagem: criada nova rota para deletar postagem

--- a/blogapp/views/admin/postagens.handlebars
+++ b/blogapp/views/admin/postagens.handlebars
@@ -13,6 +13,10 @@
             <small>Data: {{data}}</small> <br>
             <small>Categoria: {{categoria.nome}}</small> <br>
             <a href="/admin/postagens/edit/{{_id}}"><button class="btn btn-success mt-3">Editar postagem</button></a>
+            <form action="/admin/postagens/deletar" method="post">
+                <input type="hidden" value="{{_id}}" name="id">
+                <button type="submit" class="btn btn-danger mt-3">Deletar postagem</button>
+            </form>
         </div>
     </div>
 {{else}}
