--- a/blogapp/views/index.handlebars
+++ b/blogapp/views/index.handlebars
@@ -15,7 +15,11 @@
 <div class="card">
     <div class="card-body">
         <h3>{{titulo}}</h3>
-        <p>{{descricao}}</p>
+        <p>Descrição: {{descricao}}</p>
+        <a href="/postagem/{{slug}}"><button class="btn btn-success">Leia mais</button></a>
+        <hr>
+        <small>Categoria: {{categoria.nome}}</small> <br>
+        <small>Data de publicação: {{data}}</small>
     </div>
 </div>
 {{else}}
