Listagem de categorias: Mostrando postagens de acordo com a categoria selecionada

--- a/blogapp/views/postagem/index.handlebars
+++ b/blogapp/views/postagem/index.handlebars
@@ -2,8 +2,11 @@
     <div class="card-body">
         <h1>{{postagem.titulo}}</h1>
         <hr>
+        <p>{{postagem.descricao}}</p>
+        <hr>
         <small>Data de publicação: {{postagem.data}}</small>
         <hr>
         {{postagem.conteudo}}
     </div>
+    <br>
 </div>
