Mudanças nas views

--- a/views/postagem/index.handlebars
+++ b/views/postagem/index.handlebars
@@ -4,9 +4,9 @@
         <hr>
         <p>{{postagem.descricao}}</p>
         <hr>
-        <small>Data de publicação: {{postagem.data}}</small>
+        <p>{{postagem.conteudo}}</p>
         <hr>
-        {{postagem.conteudo}}
+        <small>Data de publicação: {{postagem.data}}</small>
     </div>
     <br>
 </div>
