--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -14,6 +14,12 @@
         </li>
         {{#if user}}
         <li class="nav-item">
+          <a class="nav-link" href="/admin/categorias">Admin: Categorias</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/postagens">Admin: Postagens</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/usuarios/logout">Sair</a>
         </li>
         {{else}}
